--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "object-schema-validate",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "validates an object according to a schema returning an empty object if valid, otherwise an error object with the same structure",
-  "main": "lib/validator.js",
+  "main": "dist/validator.js",
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "build": "babel --out-dir dist --ignore /temp lib"
   },
   "engines": {
     "node": ">=7.5.0"
@@ -20,6 +21,9 @@
       "email": "angel@liftit.co"
     }
   ],
+  "babel": {
+    "presets": ["es2015", "stage-2"]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/liftitapp/object-schema-validate"
@@ -33,6 +37,9 @@
     "redux form"
   ],
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.0.2",
     "mocha": "^3.4.2"
   },
